@@ -7018,3 +7018,7 @@ PACKAGE: 2.2.99.2
  * Corrected link in editor alert email, fixing #3286
  * Fixed an undef warning in EPrints::Email
 
+2008-03-04 tdb
+ * Added missing Perl export plugin
+ * Now adds default phrases for sub-fields/set options
+
